--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "ant-design-vue": "4.x",
     "axios": "^1.4.0",
     "dayjs": "^1.11.9",
+    "fast-glob": "^3.3.1",
     "fuse.js": "^6.6.2",
     "js-cookie": "^3.0.5",
+    "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
     "path-browserify": "^1.0.1",
     "path-to-regexp": "^6.2.1",
