--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@vueuse/core": "^10.3.0",
     "ant-design-vue": "4.x",
     "axios": "^1.4.0",
+    "current-device": "^0.10.2",
     "dayjs": "^1.11.9",
     "fast-glob": "^3.3.1",
     "fuse.js": "^6.6.2",
+    "js-base64": "^3.7.5",
     "js-cookie": "^3.0.5",
     "lodash": "^4.17.21",
     "nprogress": "^0.2.0",
