--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^6.1.0",
     "@vueuse/core": "^10.3.0",
+    "animate.css": "^4.1.1",
     "ant-design-vue": "4.x",
     "axios": "^1.4.0",
     "current-device": "^0.10.2",
